[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/boot_menu/rawtitletext.png" type="Texture" id=1]
[ext_resource path="res://Assets/boot_menu/boot_menu_buttons.png" type="Texture" id=2]
[ext_resource path="res://Scripts/boot_menu/boot_menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/fonts/Pixeled.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/audio/music/01_boot_menu.ogg" type="AudioStream" id=5]
[ext_resource path="res://Scenes/SettingsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/MenuSFX.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Control.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/BootMenuBG.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[node name="BootMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.058
autoplay = true
bus = "BGM"

[node name="MenuSFX" parent="." instance=ExtResource( 7 )]

[node name="BG" parent="." instance=ExtResource( 9 )]

[node name="Title" type="Node2D" parent="."]
position = Vector2( -81.8388, -17.6216 )

[node name="Sprite" type="Sprite" parent="Title"]
position = Vector2( 405, 270 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="Buttons" type="Node2D" parent="."]
position = Vector2( -383.087, -194.216 )
scale = Vector2( 1.5, 1.5 )

[node name="Start" type="TextureButton" parent="Buttons"]
margin_left = 715.0
margin_top = 200.0
margin_right = 875.0
margin_bottom = 264.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Start"]
margin_left = 37.0
margin_top = 6.0
margin_right = 123.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "START"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scoreboard" type="TextureButton" parent="Buttons"]
margin_left = 715.0
margin_top = 275.0
margin_right = 875.0
margin_bottom = 339.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Scoreboard"]
margin_left = 32.0
margin_top = 6.0
margin_right = 197.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "SCORES"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="Buttons"]
margin_left = 715.0
margin_top = 350.0
margin_right = 875.0
margin_bottom = 414.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Settings"]
margin_left = 20.0
margin_top = 6.0
margin_right = 144.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="Buttons"]
margin_left = 715.0
margin_top = 425.0
margin_right = 875.0
margin_bottom = 489.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Quit"]
margin_left = 50.0
margin_top = 6.0
margin_right = 110.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" parent="." instance=ExtResource( 6 )]

[node name="ScoreMenu" parent="." instance=ExtResource( 8 )]
[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Scoreboard" to="." method="_on_Scoreboard_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
